Add support for passing channels as list
The list of channels for statusbot can get large and unweildy, making
reviewing additions ugly. Accept it as a list. However, because of
things using the old interface, support a comma separated string being
passed as well.

Change-Id: I5adad696707b987f0fee7211b89e340d265d6bd9

--- a/templates/statusbot.config.erb
+++ b/templates/statusbot.config.erb
@@ -3,7 +3,11 @@ nick=<%= nick %>
 pass=<%= password %>
 server=<%= server %>
 port=6667
-channels=<%= channels %>
+<% if @channels.respond_to?('join') -%>
+channels=<%= @channels.join(',') %>
+<% else -%>
+channels=<%= @channels %>
+<% end -%>
 nicks=<%= auth_nicks %>
 lockfile=/var/run/statusbot/statusbot.pid
 log_config=/etc/statusbot/logging.config
