--- a/templates/statusbot.config.erb
+++ b/templates/statusbot.config.erb
@@ -1,22 +1,22 @@
 [ircbot]
-nick=<%= nick %>
-pass=<%= password %>
-server=<%= server %>
+nick=<%= @nick %>
+pass=<%= @password %>
+server=<%= @server %>
 port=6667
 <% if @channels.respond_to?('join') -%>
 channels=<%= @channels.join(',') %>
 <% else -%>
 channels=<%= @channels %>
 <% end -%>
-nicks=<%= auth_nicks %>
+nicks=<%= @auth_nicks %>
 lockfile=/var/run/statusbot/statusbot.pid
 log_config=/etc/statusbot/logging.config
 
 [wiki]
-username=<%= wiki_user %>
-password=<%= wiki_password %>
-url=<%= wiki_url %>
-pageid=<%= wiki_pageid %>
+username=<%= @wiki_user %>
+password=<%= @wiki_password %>
+url=<%= @wiki_url %>
+pageid=<%= @wiki_pageid %>
 
 [alertfile]
 dir=/var/lib/statusbot/www
