Enable #success feature from statusbot
The enables the #success feature that was recently added to
the statusbot.

Change-Id: I66b577732d1fec271a42f9229a8b5af2e52a58f4

--- a/templates/statusbot.config.erb
+++ b/templates/statusbot.config.erb
@@ -17,6 +17,10 @@ username=<%= @wiki_user %>
 password=<%= @wiki_password %>
 url=<%= @wiki_url %>
 pageid=<%= @wiki_pageid %>
+successpageid=<%= @wiki_successpageid %>
+
+[irclogs]
+url=<%= @irclogs_url %>
 
 [alertfile]
 dir=/var/lib/statusbot/www
