Allow statusbot to take a hash of auth nicks
Change-Id: Ief0848ac8e2f2132455c07c0e5d113c7b3def5ca

--- a/templates/statusbot.config.erb
+++ b/templates/statusbot.config.erb
@@ -8,7 +8,11 @@ channels=<%= @channels.join(',') %>
 <% else -%>
 channels=<%= @channels %>
 <% end -%>
+<% if @auth_nicks.respond_to?('join') -%>
+nicks=<%= @auth_nicks.join(',') %>
+<% else -%>
 nicks=<%= @auth_nicks %>
+<% end -%>
 lockfile=/var/run/statusbot/statusbot.pid
 log_config=/etc/statusbot/logging.config
 
