Add Twitter support
The statusbot project now has support for Twitter, see
Ib4bdbb335e4bc12d75d5f0ec2a1b95c8a6b2e7d5 for details.

Add support now in this module for those who wish to use it.

Change-Id: Ia861189ea10d0056afb43fe6a6fd1e51d4ffb4bf

--- a/templates/statusbot.config.erb
+++ b/templates/statusbot.config.erb
@@ -32,3 +32,11 @@ url=<%= @irclogs_url %>
 
 [alertfile]
 dir=/var/lib/statusbot/www
+
+<% if @twitter %>
+[twitter]
+consumer_key=<%= @twitter_key %>
+consumer_secret=<%= @twitter_secret %>
+access_token_key=<%= @twitter_token_key %>
+access_token_secret=<%= @twitter_token_secret %>
+<% end -%>
