Enable #thanks feature statusbot
This enables the #thanks feature in statusbot.

Change-Id: I9fd10cbaa315d2a418f3bb65ff7e40014701ec85
Depends-On: I995c3189f0f109df35c56b63b3e19427f60f3750

--- a/templates/statusbot.config.erb
+++ b/templates/statusbot.config.erb
@@ -24,6 +24,10 @@ pageid=<%= @wiki_pageid %>
 <% if @wiki_successpageid %>
 successpageid=<%= @wiki_successpageid %>
 <% end -%>
+<% if @wiki_thankspageid %>
+thankspageid=<%= @wiki_thankspageid %>
+<% end -%>
+
 
 <% if @irclogs_url %>
 [irclogs]
