Add configuration for thanks/success page url
Avoiding these being hardcoded in openstack-infra/statusbot.

Depends-On: I06d637c00dccbee49ad8a60398ac21af4064034e
Change-Id: I0d36dbff893422e188b9e992f8e9bb3c1431419f

--- a/templates/statusbot.config.erb
+++ b/templates/statusbot.config.erb
@@ -24,9 +24,16 @@ pageid=<%= @wiki_pageid %>
 <% if @wiki_successpageid %>
 successpageid=<%= @wiki_successpageid %>
 <% end -%>
+<% if @wiki_successpageurl %>
+successpageurl=<%= @wiki_successpageurl %>
+<% end -%>
 <% if @wiki_thankspageid %>
 thankspageid=<%= @wiki_thankspageid %>
 <% end -%>
+<% if @wiki_thankspageurl %>
+thankspageurl=<%= @wiki_thankspageurl %>
+<% end -%>
+
 
 
 <% if @irclogs_url %>
