--- a/templates/statusbot.config.erb
+++ b/templates/statusbot.config.erb
@@ -24,9 +24,16 @@ pageid=<%= @wiki_pageid %>
 <% if @wiki_successpageid %>
 successpageid=<%= @wiki_successpageid %>
 <% end -%>
+<% if @wiki_successpageid %>
+successpageurl=<%= @wiki_successpageurl %>
+<% end -%>
 <% if @wiki_thankspageid %>
 thankspageid=<%= @wiki_thankspageid %>
 <% end -%>
+<% if @wiki_thankspageid %>
+thankspageurl=<%= @wiki_thankspageurl %>
+<% end -%>
+
 
 
 <% if @irclogs_url %>
