Add support for configuring mqtt in statusbot
This commit adds the neecssary pieces to the statusbot config file so
that you can configure the bot to emit mqtt events.

Depends-On: Iace1cd52643a95b019287acfa1b17621251a52ee
Change-Id: I7b3b0561bc04a5450a09b943cfd73e0c8f2082f6

--- a/templates/statusbot.config.erb
+++ b/templates/statusbot.config.erb
@@ -51,3 +51,12 @@ consumer_secret=<%= @twitter_secret %>
 access_token_key=<%= @twitter_token_key %>
 access_token_secret=<%= @twitter_token_secret %>
 <% end -%>
+
+<% if @mqtt %>
+[mqtt]
+hostname=<%= mqtt_hostname %>
+port=<%= mqtt_port %>
+username=<%= mqtt_username %>
+password=<%= mqtt_password %>
+ca_certs=<%= mqtt_ca_certs_path %>
+<% end %>
